# mcp-security-pocs

./: .pre-commit-config.yaml  .ruff.toml  README.md  mcp-security-pocs.code-workspace  pyproject.toml
mcp_leak_banktools/: README.md  pyproject.toml
mcp_leak_banktools/src/: client.py  server.py
mcp_opa/: Dockerfile.mcp  README.md  docker-compose.yml
mcp_opa/policies/: policy.rego
mcp_opa/src/: client.py  server.py
mcp_opa_proxy/: Dockerfile.mcp  Dockerfile.mcp_proxy  README.md  docker-compose.yml  pyproject.toml
mcp_opa_proxy/src/: client.py  mcp_proxy.py  server.py
